[package]
name = "cast-rs"
version = "0.2.0"
authors = ["zTgx <beautifularea@163.com>"]
edition = "2018"
description = "A collection of types cast for Rust."
repository = "https://github.com/zTgx/cast-rs.git"
readme = "README.md"
keywords = [ "cast", "casttype", "hex", "downcast", "slicecast"]
categories = [ "data-structures" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]

[dependencies]
hex = "0.3.2"
downcast-rs = "1.0.4"
slice-cast = "0.1"

[lib]
name = "cast_rs"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "zTgx/cast-rs" }
